Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-111982

New example demos/documentviewer fails to compile

XMLWordPrintable

    • d8e70effc (dev), 9d5bfb49e (6.5), 550a899ba (6.5.0)

      Install Qt 6.5.0 RC binaries and include all additional modules to installation.

      Configure example demos/documentviewer:

      6.5.0/gcc_64/bin/qt-cmake -S /home/qt/RTA/Qt_6.5.0/Examples/Qt-6.5.0/demos/documentviewer -B /home/qt/RTA/Qt_6.5.0/Examples/Qt-6.5.0/demos/documentviewer/bld_gcc_64 -GNinja 

      Finishes fine, build cmake --build . -> fails:

      [1/14] Automatic MOC and UIC for target documentviewer
      [2/14] Running rcc for resource documentviewer
      [3/14] Building CXX object CMakeFiles/documentviewer.dir/pdfviewer.cpp.o
      FAILED: CMakeFiles/documentviewer.dir/pdfviewer.cpp.o 
      /usr/bin/c++ -DQT_CORE_LIB -DQT_GUI_LIB -DQT_NO_DEBUG -DQT_PDFWIDGETS_LIB -DQT_PDF_LIB -DQT_PRINTSUPPORT_LIB -DQT_WIDGETS_LIB -I/home/qt/RTA/Qt_6.5.0/Examples/Qt-6.5.0/demos/documentviewer/bld_gcc_64/documentviewer_autogen/include -isystem /home/qt/RTA/Qt_6.5.0/6.5.0/gcc_64/include/QtCore -isystem /home/qt/RTA/Qt_6.5.0/6.5.0/gcc_64/include -isystem /home/qt/RTA/Qt_6.5.0/6.5.0/gcc_64/mkspecs/linux-g++ -isystem /home/qt/RTA/Qt_6.5.0/6.5.0/gcc_64/include/QtGui -isystem /home/qt/RTA/Qt_6.5.0/6.5.0/gcc_64/include/QtWidgets -isystem /home/qt/RTA/Qt_6.5.0/6.5.0/gcc_64/include/QtPdfWidgets -isystem /home/qt/RTA/Qt_6.5.0/6.5.0/gcc_64/include/QtPdf -isystem /home/qt/RTA/Qt_6.5.0/6.5.0/gcc_64/include/QtPrintSupport -fPIC -MD -MT CMakeFiles/documentviewer.dir/pdfviewer.cpp.o -MF CMakeFiles/documentviewer.dir/pdfviewer.cpp.o.d -o CMakeFiles/documentviewer.dir/pdfviewer.cpp.o -c /home/qt/RTA/Qt_6.5.0/Examples/Qt-6.5.0/demos/documentviewer/pdfviewer.cpp
      /home/qt/RTA/Qt_6.5.0/Examples/Qt-6.5.0/demos/documentviewer/pdfviewer.cpp:12:10: fatal error: QPdfPageSelector: No such file or directory
         12 | #include <QPdfPageSelector>
            |          ^~~~~~~~~~~~~~~~~~
      compilation terminated.
      [4/14] Building CXX object CMakeFiles/documentviewer.dir/main.cpp.o
      [5/14] Building CXX object CMakeFiles/documentviewer.dir/viewerfactory.cpp.o
      [6/14] Building CXX object CMakeFiles/documentviewer.dir/abstractviewer.cpp.o
      [7/14] Building CXX object CMakeFiles/documentviewer.dir/mainwindow.cpp.o
      [8/14] Building CXX object CMakeFiles/documentviewer.dir/txtviewer.cpp.o
      [9/14] Building CXX object CMakeFiles/documentviewer.dir/documentviewer_autogen/mocs_compilation.cpp.o
      [10/14] Building CXX object CMakeFiles/documentviewer.dir/jsonviewer.cpp.o
      ninja: build stopped: subcommand failed.
      Compilation failed for /home/qt/RTA/Qt_6.5.0/Examples/Qt-6.5.0/demos/documentviewer 

      Fails on all configurations.

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            axelspoerl Axel Spoerl
            joaijala Johanna Äijälä
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes