Documentviewer demo: Don't use QPdfPageSelector in Qt 6.5

The document viewer demo uses QPdfPageSelector, which is available in
Qt 6.6 but not in 6.5. This is why the demo fails to compile in 6.5.

This patch adds ifdef'ry in order to compile without QPdfPageSelector
in 6.5.

Fixes: QTBUG-111982
Change-Id: Iaad3e5705bba784b0ce69a7f6ddfabfbe4148e84
Reviewed-by: Shawn Rutledge <shawn.rutledge@qt.io>
(cherry picked from commit d8e70effc964e12018d49f06ef9e9e8c511b9872)
Reviewed-by: Qt Cherry-pick Bot <cherrypick_bot@qt-project.org>